--- a/index.html
+++ b/index.html
@@ -11,7 +11,23 @@
     <h2>For all your incorporated company needs</h2>
 
     <!-- First, create a form tag where our inputs will be nested -->
+    <form>
+      <label>Full Name</label>
+      <input type="name" placeholder="Enter Name" required>
 
+      <label>Email</label>
+      <input id="email" name="email" placeholder="Enter Email" required>
+
+      <label>Phone</label>
+      <input id="phone" name="phone" placeholder="Enter Telephone (optional)">
+
+      <label>Message</label>
+      <textarea id="message" name="message" placeholder="Enter Message"></textarea>
+
+      <input type="checkbox" id="checkbox">
+
+      <input type="submit">
+    </form>
 
       <!-- Add a label for 'fullname'-->
 
